Select component: Fixed scrollbar

--- a/src/shared/ui/Select/select.module.css
+++ b/src/shared/ui/Select/select.module.css
@@ -39,7 +39,7 @@
 }
 
 .select__dropdown {
-    @apply transition-all origin-top ease-in-out max-h-72 overflow-y-scroll  absolute w-full border bg-dark-500 rounded-b-sm -mt-px opacity-0 z-[-1] transform-gpu scale-y-0;
+    @apply transition-all origin-top ease-in-out max-h-72 overflow-y-auto absolute w-full border bg-dark-500 rounded-b-sm -mt-px opacity-0 z-[-1] transform-gpu scale-y-0;
 }
 
 .select__dropdown_visible {
